# trakt-to-letterboxd

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  cli.py  config.template.yml  docker-compose.yml  pyproject.toml  requirements.txt  ttl.py
.github/workflows/: ci.yml  publish.yml
letterboxd_trakt/: config.py  export.py  import.py  import_letterboxd.py  log.py  main.py  trakt.py
tests/: test_core.py
trakt_to_letterboxd/: __main__.py  cli.py  config.py  config.template.yml  export.py  import_letterboxd.py  log.py  main.py  paths.py
