[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "trakt-to-letterboxd"
version = "0.1.0"
description = "Sync Trakt watch history to Letterboxd"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Louis Cresci" }]
keywords = ["trakt", "letterboxd", "movies", "sync"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "pandas",
    "pytrakt",
    "rich",
    "pyyaml",
    "pydantic",
    "selenium",
    "webdriver-manager",
]

[project.urls]
Homepage = "https://github.com/louiscrc/trakt-to-letterboxd"
Repository = "https://github.com/louiscrc/trakt-to-letterboxd"
Issues = "https://github.com/louiscrc/trakt-to-letterboxd/issues"

[project.scripts]
ttl = "trakt_to_letterboxd.cli:main"

[tool.setuptools.packages.find]
include = ["trakt_to_letterboxd*"]

[tool.setuptools.package-data]
trakt_to_letterboxd = ["config.template.yml"]
